--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,13 @@
 *::before {
   margin: 0;
   padding: 0;
+  font-family: "Noto Sans Display", sans-serif;
+}
+
+button {
+  font-family: "Noto Sans Display", sans-serif;
+  cursor: pointer;
+  border: none;
 }
 
 a {
