--- a/src/components/Timer.module.css
+++ b/src/components/Timer.module.css
@@ -30,3 +30,9 @@
   background-color: rgba(0, 0, 0, 0.15);
   transform: translateY(0.125rem);
 }
+
+.time {
+  font-size: 6.25rem;
+  font-weight: 600;
+  margin-top: 1.25rem;
+}
