--- a/src/components/Timer.module.css
+++ b/src/components/Timer.module.css
@@ -12,7 +12,7 @@
   width: 100%;
 }
 
-.radioButton {
+.secondaryButton {
   border-radius: 0.25rem;
   font-size: 1rem;
   padding: 0.125rem 0.75rem;
@@ -26,7 +26,7 @@
   background-color: rgba(0, 0, 0, 0.15);
 }
 
-.radioButton:active {
+.secondaryButton:active {
   background-color: rgba(0, 0, 0, 0.15);
   transform: translateY(0.125rem);
 }
