--- a/src/components/Timer.module.css
+++ b/src/components/Timer.module.css
@@ -21,10 +21,7 @@
   transition: transform 0.1s ease-in-out;
 }
 
-.active {
-  background-color: rgba(0, 0, 0, 0.15);
-}
-
+.secondaryActive,
 .secondaryButton:active {
   background-color: rgba(0, 0, 0, 0.15);
   transform: translateY(0.125rem);
@@ -38,4 +35,22 @@
 
 .primaryButton {
   padding: 0 0.75rem;
+  box-shadow: rgb(235, 235, 235) 0 0.375rem 0;
+  font-size: 1.375rem;
+  height: 3.4375rem;
+  color: rgb(219, 82, 77);
+  font-weight: 600;
+  width: 12.5rem;
+  background-color: white;
+  text-transform: uppercase;
+}
+
+.primaryActive,
+.primaryButton:active {
+  transform: translateY(0.375rem);
+  box-shadow: none;
+}
+
+.actionButtons {
+  margin: 1.25rem 0 0;
 }
