--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -19,3 +19,22 @@
   gap: 0.625rem;
   align-items: center;
 }
+
+.button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0.9;
+  background-color: rgba(255, 255, 255, 0.2);
+  color: white;
+  padding: 0.5rem;
+  transition: transform 0.1s ease-in-out;
+}
+
+.button:hover {
+  opacity: 1;
+}
+
+.button:active {
+  transform: translateY(0.125rem);
+}
