--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -29,6 +29,7 @@
   color: white;
   padding: 0.5rem;
   transition: transform 0.1s ease-in-out;
+  gap: 0.25rem;
 }
 
 .button:hover {
@@ -37,4 +38,19 @@
 
 .button:active {
   transform: translateY(0.125rem);
+}
+
+.label {
+  display: none;
+}
+
+@media screen and (min-width: 992px) {
+  .label {
+    display: block;
+  }
+
+  .button {
+    padding: 0.5rem 0.75rem;
+    min-width: 4.375rem;
+  }
 }
