--- a/src/components/Menu.module.css
+++ b/src/components/Menu.module.css
@@ -14,9 +14,18 @@
   z-index: 99;
 }
 
+.menuContent {
+  position: relative;
+}
+
 .overlay {
+  display: none;
   position: absolute;
-  background-color: red;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 49;
 }
 
 .visible {
