Add blocking overlay

--- a/src/components/Menu.module.css
+++ b/src/components/Menu.module.css
@@ -21,6 +21,7 @@
 .overlay {
   display: none;
   position: absolute;
+  background-color: rgba(0, 0, 0, 0.15);
   top: 0;
   bottom: 0;
   left: 0;
