--- a/src/components/Menu.module.css
+++ b/src/components/Menu.module.css
@@ -1,4 +1,9 @@
 .container {
+  position: relative;
+  display: inline-block;
+}
+
+.content {
   border-radius: 0.25rem;
   padding: 0.25rem 0;
   box-shadow: rgba(0, 0, 0, 0.15) 0 0.625rem 1.25rem,
@@ -9,17 +14,10 @@
   width: 12.5rem;
   height: fit-content;
   flex-direction: column;
-  display: none;
+  display: flex;
+  top: 100%;
   right: 0;
   z-index: 99;
-}
-
-.menuContent {
-  position: relative;
-}
-
-.visible {
-  display: flex;
 }
 
 .menuItem {
