--- a/src/components/Modal.module.css
+++ b/src/components/Modal.module.css
@@ -1,7 +1,31 @@
 .container {
   position: absolute;
   top: 0;
-  bottom: 0;
   left: 0;
-  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: 99999;
+  overflow: auto;
+  padding: 3rem 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 0.2s ease-in 0s;
+}
+
+.content {
+  --border-color: rgb(239, 239, 239);
+  color: rgb(34, 34, 34);
+  border-radius: 0.5rem;
+  background-color: white;
+  position: relative;
+  max-width: 25rem;
+  width: 95%;
+  border-top: 0.0625rem solid var(--border-color);
+  border-bottom: 00.0625rem solid var(--border-color);
+  margin: auto;
+  box-shadow: rgba(0, 0, 0, 0.15) 0 0.625rem 1.25rem,
+    rgba(0, 0, 0, 0.1) 0 0.1875rem 0.375rem;
+  overflow: hidden;
 }
