--- a/src/components/Modal.module.css
+++ b/src/components/Modal.module.css
@@ -28,4 +28,21 @@
   box-shadow: rgba(0, 0, 0, 0.15) 0 0.625rem 1.25rem,
     rgba(0, 0, 0, 0.1) 0 0.1875rem 0.375rem;
   overflow: hidden;
+  z-index: 999999;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.closeButton {
+  opacity: 0.3;
+}
+
+.closeButton:hover {
+  opacity: 0.5;
 }
