--- a/src/components/Modal.module.css
+++ b/src/components/Modal.module.css
@@ -22,6 +22,7 @@
   position: relative;
   max-width: 25rem;
   width: 95%;
+  height: 100%;
   border-top: 0.0625rem solid var(--border-color);
   border-bottom: 00.0625rem solid var(--border-color);
   margin: auto;
@@ -40,7 +41,10 @@
 }
 
 .closeButton {
+  position: absolute;
   opacity: 0.3;
+  right: 1.5rem;
+  top: 1.25rem;
 }
 
 .closeButton:hover {
