--- a/src/components/Modal.module.css
+++ b/src/components/Modal.module.css
@@ -45,6 +45,12 @@
   opacity: 0.3;
   right: 1.5rem;
   top: 1.25rem;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .closeButton:hover {
