--- a/src/components/Modal.module.css
+++ b/src/components/Modal.module.css
@@ -9,6 +9,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 999999;
 }
 
 .overlay {
@@ -23,18 +24,23 @@
 
 .modal {
   --border-color: rgb(239, 239, 239);
+}
+
+.modal {
   color: rgb(34, 34, 34);
   border-radius: 0.5rem;
   background-color: white;
   position: relative;
   max-width: 25rem;
   width: 95%;
+  z-index: 9999999;
   border-top: 0.0625rem solid var(--border-color);
   border-bottom: 00.0625rem solid var(--border-color);
+  margin: auto;
   box-shadow: rgba(0, 0, 0, 0.15) 0 0.625rem 1.25rem,
     rgba(0, 0, 0, 0.1) 0 0.1875rem 0.375rem;
   overflow: hidden;
-  z-index: 99999;
+  display: block;
 }
 
 .closeButton {
