--- a/src/components/Modal.module.css
+++ b/src/components/Modal.module.css
@@ -46,8 +46,8 @@
 .closeButton {
   position: absolute;
   opacity: 0.3;
-  right: 1.5rem;
-  top: 1.25rem;
+  right: 0;
+  top: 0;
   width: 3rem;
   height: 3rem;
   border-radius: 50%;
