--- a/src/components/Modal.module.css
+++ b/src/components/Modal.module.css
@@ -51,6 +51,7 @@
   width: 3rem;
   height: 3rem;
   border-radius: 50%;
+  margin: 0.4rem;
   display: flex;
   justify-content: center;
   align-items: center;
