--- a/src/components/Settings.module.css
+++ b/src/components/Settings.module.css
@@ -1,4 +1,15 @@
 .container {
-  display: flex;
-  height: 100px;
+  max-width: 48.75rem;
+}
+
+.content {
+  padding: 1.25rem 1.25rem 0;
+}
+
+.title {
+  font-size: 1rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: rgb(187, 187, 187);
+  margin-bottom: 1rem;
 }
