--- a/src/components/Modal.module.css
+++ b/src/components/Modal.module.css
@@ -5,6 +5,7 @@
   bottom: 0;
   right: 0;
   height: 100%;
+  overflow-y: auto;
   padding: 3rem 0;
   display: flex;
   justify-content: center;
@@ -40,10 +41,6 @@
     rgba(0, 0, 0, 0.1) 0 0.1875rem 0.375rem;
   overflow: hidden;
   display: block;
-}
-
-.content {
-  width: 100%;
 }
 
 .closeButton {
