Link modal route

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -44,6 +44,11 @@
   display: none;
 }
 
+.link {
+  width: 100%;
+  display: flex;
+}
+
 @media screen and (min-width: 992px) {
   .label {
     display: block;
