--- a/src/components/Timer.module.css
+++ b/src/components/Timer.module.css
@@ -41,12 +41,23 @@
   box-shadow: rgb(235, 235, 235) 0 0.375rem 0;
   font-size: 1.375rem;
   height: 3.4375rem;
-  color: rgb(219, 82, 77);
   font-weight: 600;
   width: 12.5rem;
   background-color: white;
   text-transform: uppercase;
   transition: color 0.5s ease-in-out 0s;
+}
+
+.pomodoro {
+  color: var(--primary-color);
+}
+
+.short_break {
+  color: var(--secondary-color);
+}
+
+.long_break {
+  color: var(--tertiary-color);
 }
 
 .primaryActive {
