--- a/src/components/Countdown.module.css
+++ b/src/components/Countdown.module.css
@@ -5,3 +5,9 @@
   margin-top: 1.25rem;
   user-select: none;
 }
+
+@media screen and (min-width: 992px) {
+  .time {
+    font-size: 7.5rem;
+  }
+}
