--- a/src/components/Timer.module.css
+++ b/src/components/Timer.module.css
@@ -34,7 +34,7 @@
   font-size: 1.375rem;
   height: 3.4375rem;
   font-weight: 600;
-  width: 12.5rem;
+  min-width: 12.5rem;
   background-color: white;
   text-transform: uppercase;
   transition: color 0.5s ease-in-out 0s;
@@ -58,30 +58,24 @@
 }
 
 .actionButtons {
-  position: relative;
+  display: flex;
+  flex-grow: 1;
+  align-items: center;
   margin: 1.25rem 0 0;
 }
 
-.counter {
-  opacity: 0.6;
-  margin-bottom: 0.25rem;
-}
-
-.footer {
-  font-size: 1.125rem;
-  font-weight: 400;
-}
-
-.nextMode {
-  position: absolute;
+.left {
   display: flex;
+  flex-grow: 1;
+  width: 100%;
+}
+
+.right {
+  display: flex;
+  flex-grow: 1;
   justify-content: center;
   align-items: center;
-  flex-grow: 1;
-  right: 0;
-  bottom: -0.375rem;
-  height: 3.375rem;
-  width: calc(55% - 6.25rem);
+  width: 100%;
 }
 
 .nextButton {
@@ -90,11 +84,13 @@
   height: 1.75rem;
   opacity: 0;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   pointer-events: none;
   transition: opacity 0.2s ease-in-out 0s;
   color: white;
+  transform: translateY(6px);
 }
 
 .showNext {
@@ -108,6 +104,16 @@
 
 .nextButton:active {
   opacity: 0.6;
+}
+
+.counter {
+  opacity: 0.6;
+  margin-bottom: 0.25rem;
+}
+
+.footer {
+  font-size: 1.125rem;
+  font-weight: 400;
 }
 
 .time {
